Closed Bug 204431 Opened 22 years ago Closed 22 years ago

The 5-arg form of addDirectory() incorrectly returns error to script

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: dveditz, Assigned: dveditz)

Details

(Keywords: regression, Whiteboard: [adt2])

Attachments

(1 file)

The 5-arg form of addDirectory() will always return UNEXPECTED_ERROR to the XPInstall script, although the action will correctly proceed and the real success or error can be retrieved through the resetError()/getLastError() mechanism.
Attached patch Fix v1Splinter Review
Keywords: regression
Comment on attachment 122462 [details] [diff] [review] Fix v1 Sean, please review. part of the big 125106 landing flipped the sense of the code here but missed flipping the comparison in this one case.
Attachment #122462 - Flags: superreview?(alecf)
Attachment #122462 - Flags: review?(ssu)
Comment on attachment 122462 [details] [diff] [review] Fix v1 Just checked the patch to bug 125106. This was the only one missed. Thanks Dan. r=ssu
Attachment #122462 - Flags: review?(ssu) → review+
Keywords: nsbeta1
Comment on attachment 122462 [details] [diff] [review] Fix v1 trivial fix.
Attachment #122462 - Flags: approval1.4b?
Comment on attachment 122462 [details] [diff] [review] Fix v1 a=sspitzer
Attachment #122462 - Flags: approval1.4b? → approval1.4b+
adt: nsbeta1+/adt2
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt2]
Attachment #122462 - Flags: approval1.4b+ → approval1.4+
patch checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Sean, Did this get checked in? I am not seeing the code fix. The test case works.
sorry, had wrong file :( verified
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: