checking in patch from dveditz for bug 204431 - The 5-arg form of addDirectory() incorrectly returns error to script.  r=ssu, sr=dmose, a=asa